[gd_scene load_steps=5 format=3 uid="uid://bnpn0aqv7e61s"]

[ext_resource type="Script" uid="uid://b8uc68hrfm2jr" path="res://bombardiro.gd" id="1_eb56x"]
[ext_resource type="PackedScene" uid="uid://dmglm4egbg2ir" path="res://bomb.tscn" id="2_nnpag"]
[ext_resource type="Texture2D" uid="uid://v63hhtudh768" path="res://enemies/bombardiro.png" id="3_2o1rj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52khe"]
size = Vector2(288, 70)

[node name="bombardiro" type="Area2D" groups=["bombardiro"]]
position = Vector2(-4, 0)
script = ExtResource("1_eb56x")
bomb_scene = ExtResource("2_nnpag")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["bombardiro"]]
position = Vector2(-3, -32)
scale = Vector2(1.81548, 1.84448)
texture = ExtResource("3_2o1rj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["bombardiro"]]
position = Vector2(-8, -4)
shape = SubResource("RectangleShape2D_52khe")

[node name="bombtimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="bombtimer" to="." method="_on_bombtimer_timeout"]
